Add checkout form and success dialog

--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -69,86 +69,6 @@
                 <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"> </i></a>
             </div>
         </main>
-    <!--
-    <footer class="footer text-muted" style="border-top: 1px solid #ccc">
-        <div class="container text-center text-md-left ">
-          &copy; 2022 - RoboTech - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            
-            <div class="row text-center text-md-left ">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Introduce Robotech</h5>
-                    <hr class="mb-4" >
-                    <div>
-                        <span>About Us</span></br>
-                        <span>Shopping Advice</span></br>
-                        <span>Recruit</span>
-
-                    </div>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">General Policy</h5>
-                    <hr class="mb-4"/>
-                    <p>
-                        <a href="#" class="text-dark" style="text-decoration:none">Installment Plan</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-dark" style="text-decoration:none">Warrenty Policy</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-dark" style="text-decoration:none">Return and Refund Policy</a>
-                    </p>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Promotion </h5>
-                    <hr class="mb-4" />
-                    <p>
-                        <a href="#" class="text-dark" style="text-decoration:none">Promotion Summary</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-dark" style="text-decoration:none">Discount Product</a>
-                    </p>
-                  
-                </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-info">Contact</h5>
-                    <hr class="mb-4" />
-                    <p>
-                        <li class="fas fa-home mr-3"></li>HO CHI MINH 
-                    </p>
-                    <p>
-                        <li class="fas fa-envelope mr-3"></li>robotech@gmail.com    
-                    </p>
-                    <p>
-                        <li class="fas fa-phone mr-3"></li>0949123456
-                    </p>
-                    
-                </div>
-                <div class="row d-flex justify-content-center"> 
-                    <div class="text-center">
-                        <ul class="list-unstyled list-inline">
-                            <li class="list-inline-item">
-                                <a href="#" class="text-dark"><li class="fab fa-facebook"></li></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#" class="text-dark">
-                            <li class="fab fa-google-plus"></li></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#" class="text-dark">
-                            <li class="fab fa-youtube"></li></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#" class="text-dark">
-                            <li class="fab fa-linkedin-in"></li></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-   -->
     <footer class="footer border-top footer text-muted">
         <div class="container">
             <div class="row">
@@ -197,14 +117,10 @@
         </div>
     </footer>
 
-
-  @*  <footer class="border-top footer text-muted">
-        
-    </footer>*@
-    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
