--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
             </div>
             <ul class="nav-item">
                 <li>
-                    <button class="btn" type="button" onclick="location.href='@Url.Action("ProductList", "Home")'" />
+                    <button class="btn" type="button" onclick="location.href='@Url.Action("ProductList", "Home")'">
                     <i class="fa-solid fa-laptop"></i>
                     Laptop
                     </button>
