Edit login - sign up, add banner on home page (still has bugs)

--- a/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
+++ b/RoboTech/Views/Accounts/DangkyTaiKhoan.cshtml
@@ -1,90 +1,69 @@
 ﻿@model RoboTech.ModelViews.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Đăng ký tài khoản";
+    ViewData["Title"] = "Sign Up";
     Layout = "_LayoutAccount";
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Đăng ký tài khoản </title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="~/favicon.png">
-    <!-- CSS -->
-    <link rel="stylesheet" href="~/css/style_login.css">
-
-    <!-- Boxicons CSS -->
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-
-</head>
-   <header>
-    <a href="/Home"><div class="line-name-signup"></div></a>
-    </header>
-<body>
-    <section class="container-login forms">
-        <div class="form login">
-            <div class="form-content">
-                <header>Signup to RoboTech</header>
-                <form asp-action="DangkyTaiKhoan">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="field input-field">
-                        <input type="text" asp-for="FullName" placeholder="Name" class="input">
-                        <span asp-validation-for="FullName" class="text-danger"></span>
-                    </div>
-                    <div class="field input-field">
-                        <input type="email" asp-for="Email" placeholder="Email" class="input">
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="field input-field">
-                        <input type="tel" asp-for="Phone" placeholder="Phone Number" class="input">
-                        <span asp-validation-for="Phone" class="text-danger"></span>
-                    </div>
-                    
-
-                    <div class="field input-field">
-                        <input type="password" asp-for="Password" placeholder="Password" class="password">
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                        <i class='bx bx-hide eye-icon'></i>
-                    </div>
 
 
-                    <div class="field button-field">
-                        <button>Signup</button>
-                    </div>
-                </form>
 
-                <div class="form-link">
-                    <span>Already have an account ? <a href="/Login">Login Now !</a></span>
-                </div>
+
+<div class="form login">
+    <div class="form-content">
+        <header style="font-size: 25px">Sign Up To <a href="/Home" class="title-head">RoboTech</a></header>
+        <form asp-action="DangkyTaiKhoan">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="field input-field">
+                <input type="text" asp-for="FullName" placeholder="Name" class="input">
+                <span asp-validation-for="FullName" class="text-danger"></span>
+            </div>
+            <div class="field input-field">
+                <input type="email" asp-for="Email" placeholder="Email" class="input">
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="field input-field">
+                <input type="tel" asp-for="Phone" placeholder="Phone Number" class="input">
+                <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
 
-            <div class="line"></div>
 
-            <div class="media-options">
-                <a href="#" class="field facebook">
-                    <i class='bx bxl-facebook facebook-icon'></i>
-                    <span>Signin with Facebook</span>
-                </a>
+            <div class="field input-field">
+                <input type="password" asp-for="Password" placeholder="Password" class="password">
+                <span asp-validation-for="Password" class="text-danger"></span>
+                <i class='bx bx-hide eye-icon'></i>
             </div>
 
-            <div class="media-options">
-                <a href="#" class="field google">
-                    <img src="~/lib/google.png" alt="" class="google-img">
-                    <span>Signin with Google</span>
-                </a>
-            </div>
 
+            <div class="field button-field">
+                <button>Signup</button>
+            </div>
+        </form>
+
+        <div class="form-link">
+            <span>Already have an account ? <a href="/Log-in">Login Now !</a></span>
         </div>
+    </div>
 
-    </section>
+    <div class="line"></div>
 
-    <!-- JavaScript -->
-    <script src="~/js/script_login.js"></script>
-</body>
-</html>
+    <div class="media-options">
+        <a href="#" class="field facebook">
+            <i class='bx bxl-facebook facebook-icon'></i>
+            <span>Signin with Facebook</span>
+        </a>
+    </div>
+
+    <div class="media-options">
+        <a href="#" class="field google">
+            <img src="~/lib/google.png" alt="" class="google-img">
+            <span>Signin with Google</span>
+        </a>
+    </div>
+
+</div>
+
+
+
 
 
 
