--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿@*Navi section*@
+
+
+<div style="" >
+    <div class=" position-sticky top-0" style="">
+        <img src="~/assets/img/banner-left.png" class="float-start banner" />
+        <img src="~/assets/img/banner-right.png" class="float-end banner" height="456px" />
+    </div>
+
 <div id="category" class="container mb-5">
     <div class="row">
         <div class="col-lg-3 flex-grow-1">
@@ -470,7 +478,7 @@
     </div>
 </div>
 
-
+</div>
 
 @*product section*@
 
@@ -864,4 +872,6 @@
         </div>
     </div>
 </div>
+
+
 
