--- a/RoboTech/wwwroot/css/style_login.css
+++ b/RoboTech/wwwroot/css/style_login.css
@@ -1,67 +1,74 @@
 /* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    
-}
+
+
 .container-login {
-    height: 85vh;
-    width: 100%;
+    height: 830px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url('../assets/img/bg.png');
     column-gap: 30px;
 }
-.form{
+
+.title-head:hover {
+    text-decoration: none !important;
+    color: dodgerblue
+}
+
+.form {
     position: absolute;
-    max-width: 430px;
+    max-width: 380px;
     width: 100%;
     padding: 30px;
     border-radius: 6px;
     background: #FFF;
 }
-.form.signup{
-    opacity: 0;
-    pointer-events: none;
-}
-.forms.show-signup .form.signup{
+
+    .form.signup {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+.forms.show-signup .form.signup {
     opacity: 1;
     pointer-events: auto;
 }
-.forms.show-signup .form.login{
+
+.forms.show-signup .form.login {
     opacity: 0;
     pointer-events: none;
 }
-header{
+
+header {
     font-size: 28px;
     font-weight: 600;
     color: #232836;
     text-align: center;
-   margin: 20px;
+    margin: 20px;
 }
-form{
+
+form {
     margin-top: 30px;
 }
-.form .field{
+
+.form .field {
     position: relative;
     height: 50px;
     width: 100%;
     margin-top: 20px;
     border-radius: 6px;
 }
+
 .field input,
-.field button{
+.field button {
     height: 100%;
     width: 100%;
     border: none;
@@ -69,15 +76,18 @@ form{
     font-weight: 400;
     border-radius: 6px;
 }
-.field input{
+
+.field input {
     outline: none;
     padding: 0 15px;
     border: 1px solid#CACACA;
 }
-.field input:focus{
-    border-bottom-width: 2px;
-}
-.eye-icon{
+
+    .field input:focus {
+        border-bottom-width: 2px;
+    }
+
+.eye-icon {
     position: absolute;
     top: 50%;
     right: 10px;
@@ -87,49 +97,58 @@ form{
     cursor: pointer;
     padding: 5px;
 }
-.field button{
+
+.field button {
     color: #fff;
     background-color: #0171d3;
     transition: all 0.3s ease;
     cursor: pointer;
 }
-.field button:hover{
-    background-color: #016dcb;
-}
-.form-link{
+
+    .field button:hover {
+        background-color: #016dcb;
+    }
+
+.form-link {
     text-align: center;
     margin-top: 10px;
 }
-.form-link span,
-.form-link a{
-    font-size: 14px;
-    font-weight: 400;
-    color: #232836;
-}
-.form a{
+
+    .form-link span,
+    .form-link a {
+        font-size: 14px;
+        font-weight: 400;
+        color: #232836;
+    }
+
+.form a {
     color: #0171d3;
     text-decoration: none;
 }
-.form-content a:hover{
+
+.form-content a:hover {
     text-decoration: underline;
 }
-.line{
+
+.line {
     position: relative;
     height: 1px;
     width: 100%;
     margin: 36px 0;
     background-color: #d4d4d4;
 }
-.line::before{
-    content: 'Or';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #FFF;
-    color: #8b8b8b;
-    padding: 0 15px;
-}
+
+    .line::before {
+        content: 'Or';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #FFF;
+        color: #8b8b8b;
+        padding: 0 15px;
+    }
+
 .line-name {
     position: relative;
     height: 2px;
@@ -139,15 +158,15 @@ form{
 }
 
     .line-name::before {
-        content: 'ROBOTECH - LOGIN';
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: #FFF;
-        color: blue;
+        color: black;
         padding: 0 15px;
     }
+
 .line-name-signup {
     position: relative;
     height: 2px;
@@ -166,49 +185,56 @@ form{
         color: blue;
         padding: 0 15px;
     }
-.media-options a{
+
+.media-options a {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-a.facebook{
+
+a.facebook {
     color: #fff;
     background-color: #4267b2;
 }
-a.facebook .facebook-icon{
-    height: 28px;
-    width: 28px;
-    color: #0171d3;
-    font-size: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-}
+
+    a.facebook .facebook-icon {
+        height: 28px;
+        width: 28px;
+        color: #0171d3;
+        font-size: 20px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #fff;
+    }
+
 .facebook-icon,
-img.google-img{
+img.google-img {
     position: absolute;
     top: 50%;
     left: 15px;
     transform: translateY(-50%);
 }
-img.google-img{
+
+img.google-img {
     height: 20px;
     width: 20px;
     object-fit: cover;
 }
-a.google{
+
+a.google {
     border: 1px solid #CACACA;
 }
-a.google span{
-    font-weight: 500;
-    opacity: 0.6;
-    color: #232836;
-}
+
+    a.google span {
+        font-weight: 500;
+        opacity: 0.6;
+        color: #232836;
+    }
 
 @media screen and (max-width: 400px) {
-    .form{
+    .form {
         padding: 20px 10px;
     }
 }
@@ -216,8 +242,8 @@ a.google span{
 body {
     margin-bottom: 25px;
 }
+
 .copyright {
- 
-    text-align:center;
-    font-size:22px;
+    text-align: center;
+    font-size: 22px;
 }
